feat: enhance multi-tenant support with admin API key and model configuration
- Added ADMIN_API_KEY support for protecting management endpoints.
- Updated .env.example and README.md to include new environment variables.
- Refactored widget.js and iframe-embed.html for consistent naming.
- Improved security by validating host claims in the public_init endpoint.
- Enhanced error handling in AIAgent for resource exhaustion.

--- a/iframe-embed.html
+++ b/iframe-embed.html
@@ -147,17 +147,17 @@
     </div>
 
     <script>
-        window.IFLAME_WIDGET_CONFIG = {
+        window.IFRAME_WIDGET_CONFIG = {
             apiBaseUrl: 'http://localhost:8000',
             widgetBaseUrl: 'http://localhost:3000'
         };
 
         const statusBox = document.getElementById('widgetStatus');
-        window.addEventListener('iflame-widget-ready', () => {
+        window.addEventListener('iframe-widget-ready', () => {
             statusBox.textContent = 'ウィジェットの読み込みに成功しました。右下のボタンからチャットを開いてください。';
             statusBox.classList.remove('error');
         });
-        window.addEventListener('iflame-widget-error', (event) => {
+        window.addEventListener('iframe-widget-error', (event) => {
             statusBox.textContent = 'ウィジェットの読み込みに失敗しました: ' + (event.detail || '不明なエラー');
             statusBox.classList.add('error');
         });
